--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "node-sass": "^4.5.0",
-    "sass-loader": "^6.0.2",
     "autoprefixer": "6.7.2",
     "babel-core": "6.22.1",
     "babel-eslint": "7.1.1",
@@ -35,11 +33,13 @@
     "http-proxy-middleware": "0.17.3",
     "jest": "18.1.0",
     "json-loader": "0.5.4",
+    "node-sass": "^4.5.0",
     "object-assign": "4.1.1",
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
     "react-dev-utils": "^0.5.1",
     "recursive-readdir": "2.1.1",
+    "sass-loader": "^6.0.2",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
@@ -55,7 +55,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-player": "^0.14.3",
-    "react-router": "^4.0.0-alpha.6"
+    "react-router": "^3.0.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
