--- a/package.json
+++ b/package.json
@@ -49,13 +49,24 @@
     "whatwg-fetch": "2.0.2"
   },
   "dependencies": {
+    "axios": "^0.9.0",
     "dotenv": "^2.0.0",
     "es6-promise": "^4.0.5",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^3.10.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-faux-dom": "^3.0.1",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.8",
     "react-player": "^0.14.3",
-    "react-router": "^3.0.2"
+    "redux": "^3.6.0",
+    "redux-devtools": "^3.3.2",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.2.0",
+    "redux-logger": "^2.8.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
