--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "axios": "^0.9.0",
     "dotenv": "^2.0.0",
     "es6-promise": "^4.0.5",
+    "font-awesome": "^4.7.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^3.10.1",
     "react": "^15.4.2",
