--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "whatwg-fetch": "2.0.2"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "axios": "^0.9.0",
     "dotenv": "^2.0.0",
     "es6-promise": "^4.0.5",
