--- a/package.json
+++ b/package.json
@@ -52,12 +52,12 @@
     "axios": "^0.9.0",
     "dotenv": "^2.0.0",
     "es6-promise": "^4.0.5",
-    "font-awesome": "^4.7.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^3.10.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-faux-dom": "^3.0.1",
+    "react-fontawesome": "^1.5.0",
     "react-player": "^0.14.3",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
