--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "es6-promise": "^4.0.5",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^3.10.1",
+    "lodash.throttle": "^4.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-faux-dom": "^3.0.1",
