--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
+    "react-window-resize-listener": "^1.1.0",
     "redux": "^3.6.0",
     "redux-devtools": "^3.3.2",
     "redux-devtools-dock-monitor": "^1.1.1",
