--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^3.10.1",
     "lodash.throttle": "^4.1.1",
+    "node-sass": "^4.5.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-faux-dom": "^3.0.1",
