--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "^15.4.2",
     "react-faux-dom": "^3.0.1",
     "react-fontawesome": "^1.5.0",
+    "react-ga": "^2.2.0",
     "react-player": "^0.14.3",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
