--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "axios": "^0.9.0",
     "dotenv": "^2.0.0",
     "es6-promise": "^4.0.5",
+    "get-urls": "^7.2.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^3.10.1",
     "lodash.throttle": "^4.1.1",
