--- a/package.json
+++ b/package.json
@@ -76,8 +76,9 @@
     "reselect": "^2.5.4"
   },
   "scripts": {
-    "start": "node --require dotenv/config scripts/start.js",
-    "build": "node --require dotenv/config scripts/build.js",
+    "start": "node scripts/start.js",
+    "dev": "node --require dotenv/config scripts/start.js",
+    "build": "node scripts/build.js",
     "test": "node --require dotenv/config scripts/test.js --env=jsdom"
   },
   "jest": {
