--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "reselect": "^2.5.4"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "node --require dotenv/config scripts/start.js",
     "dev": "node --require dotenv/config scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node --require dotenv/config scripts/test.js --env=jsdom"
