--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "redux-devtools-log-monitor": "^1.2.0",
     "redux-logger": "^2.8.2",
     "redux-thunk": "^2.2.0",
-    "reselect": "^2.5.4"
+    "reselect": "^2.5.4",
+    "uglifyjs-webpack-plugin": "^1.2.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
