--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "whatwg-fetch": "2.0.2"
   },
   "dependencies": {
+    "@mars/heroku-js-runtime-env": "^3.0.2",
     "animate.css": "^3.5.2",
     "axios": "^0.9.0",
     "dotenv": "^2.0.0",
